water、視角需調整

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
   <!-- lightBox for activity_application-->
   <div class="box-shadow">
   </div>
+  
   <div class="lightbox activity">
     <div class="lightbox-container container">
       <div class="fas-container">
@@ -151,7 +152,7 @@
       </div>
     </div>
   </div>
-  <!-- lightBox end -->
+
   <!-- lightBox for weather_page-->
   <div class="lightbox weather">
     <div class="container lightbox-container">
@@ -248,7 +249,7 @@
       </div>
     </div>
   </div>
-  <!-- lightBox end -->
+
   <!-- header -->
   <header class="header navbar navbar-light bg-light">
     <div class="container">
@@ -260,8 +261,6 @@
       </div>
     </div>
   </header>
-  <!-- header end -->
-  
   <!-- marquee -->
   <div class="marquee pb-md-2 container">
     <marquee direction="left" speed="slow" behavior="loop">
@@ -269,8 +268,7 @@
       <span>海上颱風警報:預測颱風的七級風暴風範圍可能侵襲台灣或金門、馬袓陸上時之前18小時，即發布「海上陸上颱風警報」。之後每隔1小時發布一次，必要時得加發之。</span>
     </marquee>
   </div>
-  <!-- marquee end -->
-  </div>
+
   <section class="section1 bg-light text-center">
     <div class="container">
         <div class="row">
@@ -329,7 +327,7 @@
         </div>
     </div>
   </section>
-  <section class="second">
+  <section class="section2">
     <div class="container mt-md-5">
       <div class="row">
         <div class="col-12 col-md-6">
