--- a/src/index2.html
+++ b/src/index2.html
@@ -9,232 +9,6 @@
 	<body>
 		<div id="container"></div>
 		<div class="container-box">
-			<div class="box-shadow">
-			</div>
-			
-			<div class="lightbox activity">
-				<div class="lightbox-container container">
-					<div class="fas-container">
-						<i class="fas fa-times"></i>
-					</div>
-					<div class="row">
-						<div class="activity-tabList col-12 p-2">
-							<div data-target="tab1" class="tab -on  style-on p-1">
-								<img src="./img/lightbox_page/application.png">
-								<p>活動申請</p>
-							</div>
-							<div data-target="tab2" class="tab p-1">
-								<img src="./img/lightbox_page/link.png">
-								<p>相關連結</p>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="activity-tabContainer col-12">
-							<div class="activity-tabContents tab1 -on">
-								<div class="content">
-									<a href="#" class="mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">基隆市島礁磯釣活動</div>
-									</a>
-									<p class="pl-sm-3 pl-lg-6 pl-xl-6">基隆市政府、基隆區漁會</p>
-								</div>
-								<div class="content pt-2">
-									<a href="#" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">遊艇申辦服務平台</div>
-									</a>
-									<p class="pl-sm-3 pl-lg-6 pl-xl-6">泊位資訊查詢、遊艇進出港申請、泊位未申請</p>
-								</div>
-								<div class="content pt-2">
-									<a href="#" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">東北角龜山島登島</div>
-									</a>
-									<p class="pl-sm-3 pl-lg-6 pl-xl-6">龜山島各項申請查詢作業、船舶資訊、法規資訊、登島表單之線上申請系統</p>
-								</div>
-								<div class="content pt-2">
-									<a href="#" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">台江國家公園水域</div>
-									</a>
-									<p class="pl-sm-3 pl-lg-6 pl-xl-6">遊憩活動申請須知及相關附件</p>
-								</div>
-								<div class="content pt-2">
-									<a href="#" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">台江國家公園水域</div>
-									</a>
-									<p class="pl-sm-3 pl-lg-6 pl-xl-6">遊憩活動申請須知及相關附件</p>
-								</div>
-								<div class="content pt-2">
-									<a href="#" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">台江國家公園水域</div>
-									</a>
-									<p class="pl-sm-3 pl-lg-6 pl-xl-6">遊憩活動申請須知及相關附件</p>
-								</div>
-								<div class="content pt-2 pb-2">
-									<a href="#" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">台江國家公園水域</div>
-									</a>
-									<p class="pl-sm-3 pl-lg-6 pl-xl-6">遊憩活動申請須知及相關附件</p>
-								</div>
-							</div>
-							<div class="activity-tabContents tab2">
-								<div class="content">
-									<a href="https://www.fa.gov.tw/cht/LawsCentralFisheries/content.aspx?id=17&chk=76cc8fe4-de25-4a4f-8a46-bdfd838601cc&param" class="mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">娛樂漁船</div>
-									</a>
-								</div>
-								<div class="content pt-2">
-									<a href="https://www.oca.gov.tw/userfiles/A47020000A/files/6_5%E8%87%BA%E7%81%A3%E6%B5%B7%E5%9F%9F%E8%B3%9E%E9%AF%A8%E6%8C%87%E5%8D%97-%E9%9B%BB%E5%AD%90%E7%89%88.pdf" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">賞鯨活動</div>
-									</a>
-								</div>
-								<div class="content pt-2">
-									<a href="https://www.cwb.gov.tw/V8/C/M/bluehighway_home.html" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">藍色公路</div>
-									</a>
-								</div>
-								<div class="content pt-2">
-									<a href="https://www.forest.gov.tw/Driftwood" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">撿拾漂流木</div>
-									</a>
-								</div>
-								<div class="content pt-2">
-									<a href="https://law.moj.gov.tw/LawClass/LawAll.aspx?pcode=K0070069" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">遊艇活動</div>
-									</a>
-								</div>
-								<div class="content pt-2">
-									<a href="https://ocean.taiwan.gov.tw/oacmap/1090210_%E5%85%AC%E5%91%8A%E7%A6%81%E6%AD%A2%E6%88%96%E9%99%90%E5%88%B6%E6%B0%B4%E5%9F%9F%E9%81%8A%E6%86%A9%E6%B4%BB%E5%8B%95%E6%B5%B7%E5%9F%9F%E7%AF%84%E5%9C%8D.pdf" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title"> 目前公告禁止或限制水域遊憩活動海域範圍</div>
-									</a>
-								</div>
-								<div class="content pt-2">
-									<a href="http://www.nlia.org.tw/modules/tadnews/page.php?ncsn=130#A" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">海域保險專區</div>
-									</a>
-								</div>
-								<div class="content pt-2 pb-2">
-									<a href="https://www.motcmpb.gov.tw/Information/Notice?SiteId=1&NodeId=483" class="mt-1 mb-1 pl-sm-3 pl-lg-6 pl-xl-6">
-										<i class="fas fa-link"></i>
-										<div class="title">礙航及射擊通報</div>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- lightBox for weather_page-->
-			<div class="lightbox weather">
-				<div class="container lightbox-container">
-					<i class="fas fa-times"></i>
-					<div class="weather-content">
-						<a class="weather-contentBlock" href="https://www.windy.com/?23.652,121.278,8">
-							<div class="pic">
-								<img src="./img/lightbox_page/windy.png">
-							</div>
-							<div class="text">
-								<span>Windy</span>
-								<p>(外部連結)</p>
-							</div>
-						</a>
-						<a class="weather-contentBlock" href="https://safesee.cwb.gov.tw/V2/">
-							<div class="pic">
-								<img src="./img/lightbox_page/cwb.png">
-							</div>
-							<div class="text">
-								<span>台灣氣象災防平台</span>
-								<p>(外部連結)</p>
-							</div>
-						</a>
-						<a class="weather-contentBlock" href="map.html?uuid=b7d12861-af3f-4cc0-847a-7d080ab03da0">
-							<div class="pic">
-								<img src="./img/lightbox_page/observatory.png">
-							</div>
-							<div class="text">
-								<span>商港觀測站</span>
-							</div>
-						</a>
-						<a class="weather-contentBlock" href="map.html?uuid=bc54a445-7b3d-43d1-80f9-10fbf5cec4b3">
-							<div class="pic">
-								<img src="./img/lightbox_page/forecast.png">
-							</div>
-							<div class="text">
-								<span>近海天氣預報</span>
-							</div>
-						</a>
-						<a class="weather-contentBlock" href="map.html?uuid=8794829d-4d5e-4ba0-9133-ddd61719a4df">
-							<div class="pic">
-								<img src="./img/lightbox_page/coastal.png">
-							</div>
-							<div class="text">
-								<span>沿海鄉鎮天氣預報</span>
-							</div>
-						</a>
-						<a class="weather-contentBlock" href="map.html?uuid=d48172cd-4ab4-4649-bcd1-1b0970827366">
-							<div class="pic">
-								<img src="./img/lightbox_page/occeanCurrent.png">
-							</div>
-							<div class="text">
-								<span>表面海流</span>
-							</div>
-						</a>
-						<a class="weather-contentBlock" href="map.html?uuid=ad990e52-379e-4e8f-89dd-e03e464b27f5">
-							<div class="pic">
-								<img src="./img/lightbox_page/tidal.png">
-							</div>
-							<div class="text">
-								<span>潮汐資訊</span>
-							</div>
-						</a>
-						<a class="weather-contentBlock" href="map.html?uuid=1a2ede8e-59cd-464f-b964-e44d1476f5fd">
-							<div class="pic">
-								<img src="./img/lightbox_page/quality.png">
-							</div>
-							<div class="text">
-								<span>海域水質</span>
-							</div>
-						</a>
-						<div class="weather-contentBlock">
-							<div class="pic">
-								<img src="./img/lightbox_page/wave.png">
-							</div>
-							<div class="text">
-								<span>波浪資訊</span>
-								<a href="map.html?uuid=2438f673-3a6e-4762-8529-6a2cadc84a51">浪高</a>
-								<a href="map.html?uuid=3322298e-bbe1-4a91-8d9f-7205c228bdcc">週期</a>
-								<a href="map.html?uuid=44d021b6-d010-49cc-b9a6-2fd816e9d50b">異常趨勢</a>
-							</div>
-						</div>
-						<div class="weather-contentBlock">
-							<div class="pic">
-								<img src="./img/lightbox_page/surfaceTemperature.png">
-							</div>
-							<div class="text">
-								<span>波浪資訊</span>
-								<a href="map.html?uuid=9f3c63b0-7fe7-493a-9995-0e70dc4ae5b9">溫度</a>
-								<a href="map.html?uuid=5a1cb7a2-2c28-4860-a4c8-80c057929ea1">高度</a>
-								<a href="map.html?uuid=4b5fb55a-3d4e-412c-a23b-c0d3b950e886">鹽度</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- header -->
 			<header class="header navbar navbar-light">
 				<div class="container">
 					<div class="col">
@@ -245,7 +19,6 @@
 					</div>
 				</div>
 			</header>
-			<!-- marquee -->
 			<div class="marquee pb-md-2 container">
 				<marquee direction="left" speed="slow" behavior="loop">
 					<span>海上颱風警報:預測颱風的七級風暴風範圍可能侵襲台灣或金門、馬袓陸上時之前18小時，即發布「海上陸上颱風警報」。之後每隔1小時發布一次，必要時得加發之。</span>
@@ -258,55 +31,48 @@
 						<div class="row">
 							<div class="col-sm-6 col-md-6 col-lg-4" id="activity">
 								<div class="section1-item mx-auto my-3 my-lg-2">
-									<img class="section1-item-icon d-flex" src="./img/leading_page/application.png">
+									<img class="section-item-icon " src="./img/leading_page/application.png">
 								</div>
 								<button class="btn btn-primary">活動申請</button>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4">
-								<div class="section1-item mx-auto my-3 my-lg-2">
-									<img class="section1-item-icon d-flex" src="./img/leading_page/warning.png">
+								<div class="section-item mx-auto my-3 my-lg-2">
+									<img class="section-item-icon" src="./img/leading_page/warning.png">
 								</div>
 								<button class="btn btn-primary">
-									禁止水域
-								</button>
-							</div>
-							<div class="col-sm-6 col-md-6 col-lg-4">
-								<div class="section1-item mx-auto my-3 my-lg-2">
-									<img class="section1-item-icon d-flex" src="./img/leading_page/warning.png">
-								</div>
-								<button class="btn btn-primary">
+									禁止水域<br>
 									礙航/射擊通報
 								</button>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4">
 								<div class="section1-item mx-auto my-3 my-lg-2">
-									<img class="section1-item-icon d-flex" src="./img/leading_page/recreation.png">
+									<img class="section-item-icon" src="./img/leading_page/recreation.png">
 								</div>
 								<button class="btn btn-primary">遊憩查詢</button>
 							</div>
 							<div class="col-sm-6 col-md-6 col-lg-4" id="weatherPage">
 								<div class="section1-item mx-auto my-3 my-lg-2">
-									<img class="section1-item-icon d-flex" src="./img/leading_page/weather.png">
+									<img class="section-item-icon" src="./img/leading_page/weather.png">
 								</div>
 								<button class="btn btn-primary">氣象海情</button>
 							</div>
 							<a href="map.html?catelog=situation" class="col-sm-6 col-md-6 col-lg-4">
 									<div class="section1-item mx-auto my-3 my-lg-2">
-										<img class="section1-item-icon d-flex" src="./img/leading_page/law.png">
+										<img class="section-item-icon" src="./img/leading_page/law.png">
 									</div>
 									<button class="btn btn-primary">法令資訊</button>
 							</a>
 							<a href="map.html?uuid=df595e60-6287-4623-8317-4b8d6f82e2e5" class="col-sm-6 col-md-6 col-lg-4">
 								<div class="section1-item mx-auto my-3 my-lg-2">
-									<img class="section1-item-icon d-flex" src="./img/leading_page/cctv.svg">
+									<img class="section-item-icon" src="./img/leading_page/cctv.svg">
 								</div>
-								<button class="btn btn-primary">海況即時影像</button>
+								<button class="btn btn-primary">海況影像</button>
 							</a>
 							<a href="map.html" class="col-sm-6 col-md-6 col-lg-4">
 								<div class="section1-item mx-auto my-3 my-lg-2">
-									<img class="section1-item-icon d-flex" src="./img/leading_page/taiwanmap.png">
+									<img class="section-item-icon" src="./img/leading_page/taiwanmap.png">
 								</div>
-								<button class="btn btn-primary">海況即時影像</button>
+								<button class="btn btn-primary">進入地圖</button>
 							</a>
 						</div>
 				</div>
@@ -335,12 +101,12 @@
 			<footer>
 				<div class="container-fluid">
 					<div class="row no-gutters">
-						<p class="col-12 col-sm-2 col-md-2 col-lg-2">&copy海洋委員會</p>
-						<p class="col-12 col-sm-4 col-sm-5 col-md-4 col-lg-4">高雄市前鎮區成功二路25號4樓</p>
-						<p class="col-3 col-sm-2  col-md-2 col-lg-2">(07)338-1810</p>
-						<div class="visits col-4 col-sm-3 ">
+						<h6 class="col-12 col-sm-2 col-md-2 col-lg-2">&copy海洋委員會</h6>
+						<h6 class="col-12 col-sm-4 col-sm-5 col-md-4 col-lg-4">高雄市前鎮區成功二路25號4樓</h6>
+						<h6 class="col-12 col-sm-2  col-md-2 col-lg-2">(07)338-1810</h6>
+						<h6 class="visits col-12 col-4 col-sm-3 ">
 							瀏覽人次:<p id="people" class="d-inline">2223</p>
-						</div>
+						</h6>
 					</div>
 				</div>
 			</footer>
