Failed to compile.

--- a/src/index2.html
+++ b/src/index2.html
@@ -107,6 +107,22 @@
 				<div class="col-12 col-md-6">
 					<div class="card mt-2">
 						<div class="card-body">
+							<h5 class="card-title">撿拾漂流木</h5>
+							<div class="card-text">
+								林務局提供漂流木公文，須注意撿拾對象、區域、時間。撿拾後須到站登記才能搬運離開。
+							</div>								
+							<a href="https://www.forest.gov.tw/" class="card-link">
+								林務局官方網站
+							</a>
+							<a href="https://www.forest.gov.tw/Driftwood" class="card-link">
+								撿拾漂流木開放時間查詢
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-6">
+					<div class="card mt-2">
+						<div class="card-body">
 							<h5 class="card-title">賞鯨活動</h5>
 							<div class="card-text">
 								臺灣鯨豚資源豐富，全球80多種鯨豚中，有近30種曾出現於我國周遭海域，每年4月到10月間是臺灣的賞鯨季節，海保署透過「臺灣海域賞鯨指南」發布，以淺顯易懂的圖像文字，說明友善賞鯨重點原則，希望大家都能當個負責任的遊客，在開心賞鯨時，也瞭解如何減少賞鯨活動對於鯨豚族群造成衝擊，讓珍貴的鯨豚資源與賞鯨產業皆能永續發展。
@@ -131,23 +147,7 @@
 								台北市藍色水路旅遊官方網站
 							</a>
 							<a href="https://www.cwb.gov.tw/V8/C/M/bluehighway_home.html" class="card-link">
-								中央氣象局藍色公路浪高、風級等級說明
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">撿拾漂流木</h5>
-							<div class="card-text">
-								林務局提供漂流木公文，須注意撿拾對象、區域、時間。撿拾後須到站登記才能搬運離開。
-							</div>								
-							<a href="https://www.forest.gov.tw/" class="card-link">
-								林務局官方網站
-							</a>
-							<a href="https://www.forest.gov.tw/Driftwood" class="card-link">
-								撿拾漂流木開放時間查詢
+								藍色公路浪高、風級等級說明
 							</a>
 						</div>
 					</div>
@@ -186,7 +186,38 @@
 				</div>
 			</div>
 		</div>
+		<section class="item2 container">
+			<div class="row">
+				<div class="col-12">
+					<h3 class="TealBlue">禁止水域</h3>
+					<h5 class="text-justify">
+					</h5>
+				</div>
+			</div>
 
+			<div class="row">
+				<div class="col-12">
+					<h3 class="TealBlue">礙航/射擊通報</h3>
+					<h5 class="text-justify">
+					</h5>
+				</div>
+				<div class="col-12">
+					<select class="">
+						<option value="">請選擇地區</option>
+						<option value="kaohsiung">基隆</option>
+						<option value="kaohsiung">臺北</option>
+						<option value="taichung">臺中</option>
+						<option value="">嘉義</option>
+						<option value="">高雄</option>
+						<option value="">屏東</option>
+						<option value="">臺東</option>
+					</select>
+				</div>
+				<div class="col-12">
+					<input size="10"  type="text" id="date" readonly="readonly" />
+				</div>
+			</div>
+		</section>
 
 		<footer>
       <div class="container-fluid">
