首頁第一版

--- a/src/insidePage.html
+++ b/src/insidePage.html
@@ -11,6 +11,51 @@
 			<p class="BrightGray">海洋委員會</p>
 			<h1 class="TealBlue">海域休憩活動一站式平台</h1>
 		</section>
+		<section class="container">
+			<div class="row">
+				<div class="col">
+					<div class="dropdown">
+						<div class="btn-group">
+							<button class="btn btn-lg dropdown-toggle SeaSerpent" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+								活動申請
+							</button>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item active" href="#">活動申請</a></li>
+								<li><a class="dropdown-item" href="#">禁止水域/礙航/射擊通報</a></li>
+								<li><a class="dropdown-item" href="#">遊憩查詢</a></li>
+								<li><hr class="dropdown-divider"></li>
+								<li><a class="dropdown-item" href="#">氣象海情</a></li>
+								<li><a class="dropdown-item" href="#">法令資訊</a></li>
+								<li><a class="dropdown-item" href="#">海況影像</a></li>
+							</ul>
+						</div>
+					</div>					
+				</div>
+
+			</div>
+			<div class="row nav-bg">
+				<div class="col-2">
+					<button class="btn SeaSerpent">活動申請</button>
+				</div>
+				<div class="col-2">
+					<button class="btn SeaSerpent">禁止水域<br>
+						礙航/射擊通報
+					</button>
+				</div>
+				<div class="col-2">
+					<button class="btn SeaSerpent">遊憩查詢</button>
+				</div>
+				<div class="col-2">
+					<button class="btn SeaSerpent">氣象海情</button>
+				</div>
+				<div class="col-2">
+					<button class="btn SeaSerpent">法令資訊</button>
+				</div>
+				<div class="col-2">
+					<button class="btn SeaSerpent">海況影像</button>
+				</div>
+			</div>
+		</section>
 		<div class="item1 container">
 			<div class="row">
 				<div class="col-12">
@@ -201,7 +246,7 @@
 					<h5 class="text-justify">
 					</h5>
 				</div>
-				<div class="col-12">
+				<div class="col-4">
 					<select class="">
 						<option value="">請選擇地區</option>
 						<option value="kaohsiung">基隆</option>
@@ -213,12 +258,14 @@
 						<option value="">臺東</option>
 					</select>
 				</div>
-				<div class="col-12">
-					<input size="10"  type="text" id="date" readonly="readonly" />
+				<div class="col-4">
+					
 				</div>
 			</div>
 		</section>
-
+		<section class="item3 container">
+			
+		</section>
 		<footer>
       <div class="container-fluid">
         <div class="row no-gutters">
