--- a/src/insidePage.html
+++ b/src/insidePage.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<section class="nav-wrapper container">
-			<p class="BrightGray">海洋委員會</p>
+			<h5 class="BrightGray">海洋委員會</h5>
 			<h1 class="TealBlue">海域休憩活動一站式平台</h1>
 		</section>
 		<section class="container">
@@ -16,267 +16,245 @@
 				<div class="col">
 					<div class="dropdown">
 						<div class="btn-group">
-							<button class="btn btn-lg dropdown-toggle SeaSerpent" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+							<button class="btn2 btn-lg dropdown-toggle SeaSerpent" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 								活動申請
 							</button>
 							<ul class="dropdown-menu">
-								<li><a class="dropdown-item active" href="#">活動申請</a></li>
-								<li><a class="dropdown-item" href="#">禁止水域/礙航/射擊通報</a></li>
-								<li><a class="dropdown-item" href="#">遊憩查詢</a></li>
-								<li><hr class="dropdown-divider"></li>
-								<li><a class="dropdown-item" href="#">氣象海情</a></li>
-								<li><a class="dropdown-item" href="#">法令資訊</a></li>
-								<li><a class="dropdown-item" href="#">海況影像</a></li>
+								<li>
+									<a class="dropdown-item active tab" href="#tab1">活動申請</a>
+								</li>
+								<li>
+									<a class="dropdown-item tab" href="#tab2">禁止水域/礙航/射擊通報</a>
+								</li>
+								<li>
+									<a class="dropdown-item tab" href="#tab3">遊憩查詢</a>
+								</li>
+								<li>
+									<a class="dropdown-item tab" href="#tab4">氣象海情</a>
+								</li>
+								<li>
+									<a class="dropdown-item tab" href="#tab5">法令資訊</a>
+								</li>
+								<li>
+									<a class="dropdown-item tab" href="#tab6">海況影像</a>
+								</li>
 							</ul>
 						</div>
 					</div>					
 				</div>
-
 			</div>
-			<div class="row nav-bg">
-				<div class="col-2">
-					<button class="btn SeaSerpent">活動申請</button>
-				</div>
-				<div class="col-2">
-					<button class="btn SeaSerpent">禁止水域<br>
-						礙航/射擊通報
-					</button>
-				</div>
-				<div class="col-2">
-					<button class="btn SeaSerpent">遊憩查詢</button>
-				</div>
-				<div class="col-2">
-					<button class="btn SeaSerpent">氣象海情</button>
-				</div>
-				<div class="col-2">
-					<button class="btn SeaSerpent">法令資訊</button>
-				</div>
-				<div class="col-2">
-					<button class="btn SeaSerpent">海況影像</button>
+			<div class="row nav-bg tab-group">
+				<div class="col">
+					<a href="#tab1" class="btn2 SeaSerpent tab active">活動申請</a>
+					<a href="#tab2" class="btn2 SeaSerpent tab">禁止水域
+						礙航/射擊通報</a>
+					<a href="#tab3" class="btn2 SeaSerpent tab">遊憩查詢</a>
+					<a href="#tab4" class="btn2 SeaSerpent tab">氣象海情</a>
+					<a href="#tab5" class="btn2 SeaSerpent tab">法令資訊</a>
+					<a href="#tab6" class="btn2 SeaSerpent tab">海況影像</a>
 				</div>
 			</div>
 		</section>
-		<div class="item1 container">
-			<div class="row">
-				<div class="col-12">
-					<h3 class="TealBlue">活動申請</h3>
-					<h5 class="text-justify">為提供民眾方便友善之橫向連結資訊，目前提供相關磯釣活動申請、遊艇申辦服務流程說明、龜山島登島申請與台江公園國家水域等海灣活動需提供申請之流程
-					</h5>
+
+		<section class="tab-content">
+			<div class="container" id="tab1">
+				<div class="row">
+					<div class="col-12">
+						<h3 class="TealBlue">活動申請</h3>
+						<h5 class="text-justify">為提供民眾方便友善之橫向連結資訊，目前提供相關磯釣活動申請、遊艇申辦服務流程說明、龜山島登島申請與台江公園國家水域等海灣活動需提供申請之流程
+						</h5>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">基隆市島礁磯釣活動</h5>
+								<div class="card-text">
+									基隆市政府2020年推出【島礁磯釣證線上申請系統】，讓民眾更方便快速完成辦證，帶動島礁磯釣國際賽事與週邊相關產業發展。
+								</div>
+								<a href="http://klfish.naffic.org.tw/webpad/webpad.aspx?EpfJdId9UuDR1K%2BD%2BQ4%2F70pgeh4ocITQ" class="card-link">
+									基隆區漁會官方網站
+								</a>
+								<a href="https://www.icellars.tw/keelungreeffishing/auth/login.html" class="card-link">基隆市島礁磯釣活動申請入口
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">遊艇申辦服務平台</h5>
+								<div class="card-text">
+									交通部航港局於2019年推出【遊艇申辦服務平台】。服務平台使用非常容易，只要登錄帳號、填寫進出港申請、申請泊位，即可等著收取email確認。
+								</div>
+								<a href="https://web02.mtnet.gov.tw/" class="card-link">
+									海港單一窗口服務平台
+								</a>								
+								<a href="https://ftz.mtnet.gov.tw/YBerth/Portal/Logout" class="card-link">
+									泊位資訊查詢
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">東北角龜山島登島</h5>
+								<div class="card-text">
+									龜山島各項申請查詢作業、船舶資訊、法規資訊、登島表單之線上申請系統。
+								</div>								
+								<a href="https://events.necoast-nsa.gov.tw/coast/index.aspx" class="card-link">
+									東北角龜山島登島官方網站
+								</a>
+								<a href="https://events.necoast-nsa.gov.tw/Coast/Application.aspx?a=2659" class="card-link">
+									登島線上申請
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">台江國家公園水域</h5>
+								<div class="card-text">
+									特別景觀區之「特一-北汕尾濕地特別景觀區」、「特五-曾文溪口特別景觀區」部分公共河道水域，一般管制區之「管一-鹽水溪水域一般管制區」部分水域、「管八-七股潟湖一般管制區」水域應向台江國家公園申請核准後始得從事水域遊憩活動。
+								</div>
+								<a href="https://www.tjnp.gov.tw/" class="card-link">
+									台江國家公園官方網站
+								</a>								
+								<a href="https://www.tjnp.gov.tw/PublicInformationDetail.aspx?Cond=83713bde-e4e4-4f5c-a8ad-ed4cc0d60c34" class="card-link">
+									活動申請須知
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12">
+						<h3 class="TealBlue">相關連結</h3>
+						<h5 class="text-justify">
+							提供漁船管理辦法、賞鯨指南PDF、藍色公路
+						</h5>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">娛樂漁船</h5>
+								<div class="card-text">
+									此為漁業署之娛樂漁業管理辦法條文連結，提供法條參考與相關文件。
+								</div>								
+								<a href="https://www.fa.gov.tw/cht/LawsCentralFisheries/content.aspx?id=17&chk=76cc8fe4-de25-4a4f-8a46-bdfd838601cc&param" class="card-link">
+									漁業署相關文件連結
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">撿拾漂流木</h5>
+								<div class="card-text">
+									林務局提供漂流木公文，須注意撿拾對象、區域、時間。撿拾後須到站登記才能搬運離開。
+								</div>								
+								<a href="https://www.forest.gov.tw/" class="card-link">
+									林務局官方網站
+								</a>
+								<a href="https://www.forest.gov.tw/Driftwood" class="card-link">
+									撿拾漂流木開放時間查詢
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">賞鯨活動</h5>
+								<div class="card-text">
+									臺灣鯨豚資源豐富，全球80多種鯨豚中，有近30種曾出現於我國周遭海域，每年4月到10月間是臺灣的賞鯨季節，海保署透過「臺灣海域賞鯨指南」發布，以淺顯易懂的圖像文字，說明友善賞鯨重點原則，希望大家都能當個負責任的遊客，在開心賞鯨時，也瞭解如何減少賞鯨活動對於鯨豚族群造成衝擊，讓珍貴的鯨豚資源與賞鯨產業皆能永續發展。
+								</div>								
+								<a href="https://www.oca.gov.tw/ch/index.jsp" class="card-link">
+									海洋保育署官方網站
+								</a>
+								<a href="https://ftz.mtnet.gov.tw/YBerth/Portal/Logout" class="card-link">
+									賞鯨指南(PDF)
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">藍色公路</h5>
+								<div class="card-text">
+									藍色公路目前主要有兩條航線。一是基隆河，由大佳河濱公園碼頭出發至美堤碼頭、錫口碼頭，於內湖科技園區附近的河域再往返，主要以遊河為主，夜晚河畔建築物燈光以及橋上的光雕點綴，更能展現臺北都市之美；另外一條是淡水河，而在淡水河有五個乘船處，分別是大稻埕碼頭、關渡碼頭、淡水客船碼頭、淡水漁人碼頭、八里客船碼頭。
+								</div>								
+								<a href="https://www.riverfun.net/" class="card-link">
+									台北市藍色水路旅遊官方網站
+								</a>
+								<a href="https://www.cwb.gov.tw/V8/C/M/bluehighway_home.html" class="card-link">
+									藍色公路浪高、風級等級說明
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">遊艇管理規則</h5>
+								<div class="card-text">
+									此為全國法規資料庫之【遊艇管理規則】法規，提供有需要之民眾查閱。
+								</div>								
+								<a href="https://law.moj.gov.tw/Index.aspx" class="card-link">
+									全國法規資料庫官方網站
+								</a>
+								<a href="https://law.moj.gov.tw/LawClass/LawAll.aspx?pcode=K0070069" class="card-link">
+									遊艇管理規則法規
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6">
+						<div class="card mt-2">
+							<div class="card-body">
+								<h5 class="card-title">遊艇管理規則</h5>
+								<div class="card-text">
+									產險業者推出「海域活動綜合保險」商品，保障內容除了一般傷害保險與旅行平安險保障外，還增加民眾參與海域休憩活動可能面臨的傷害保障。
+								</div>								
+								<a href="http://www.nlia.org.tw/" class="card-link">
+									中華民國產物保險商業同業公會
+								</a>
+								<a href="http://www.nlia.org.tw/modules/tadnews/page.php?ncsn=130&nsn=912#A" class="card-link">
+									海域活動保險專區
+								</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">基隆市島礁磯釣活動</h5>
-							<div class="card-text">
-								基隆市政府2020年推出【島礁磯釣證線上申請系統】，讓民眾更方便快速完成辦證，帶動島礁磯釣國際賽事與週邊相關產業發展。
-							</div>
-							<a href="http://klfish.naffic.org.tw/webpad/webpad.aspx?EpfJdId9UuDR1K%2BD%2BQ4%2F70pgeh4ocITQ" class="card-link">
-								基隆區漁會官方網站
-							</a>
-							<a href="https://www.icellars.tw/keelungreeffishing/auth/login.html" class="card-link">基隆市島礁磯釣活動申請入口
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">遊艇申辦服務平台</h5>
-							<div class="card-text">
-								交通部航港局於2019年推出【遊艇申辦服務平台】。服務平台使用非常容易，只要登錄帳號、填寫進出港申請、申請泊位，即可等著收取email確認。
-							</div>
-							<a href="https://web02.mtnet.gov.tw/" class="card-link">
-								海港單一窗口服務平台
-							</a>								
-							<a href="https://ftz.mtnet.gov.tw/YBerth/Portal/Logout" class="card-link">
-								泊位資訊查詢
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">東北角龜山島登島</h5>
-							<div class="card-text">
-								龜山島各項申請查詢作業、船舶資訊、法規資訊、登島表單之線上申請系統。
-							</div>								
-							<a href="https://events.necoast-nsa.gov.tw/coast/index.aspx" class="card-link">
-								東北角龜山島登島官方網站
-							</a>
-							<a href="https://events.necoast-nsa.gov.tw/Coast/Application.aspx?a=2659" class="card-link">
-								登島線上申請
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">台江國家公園水域</h5>
-							<div class="card-text">
-								特別景觀區之「特一-北汕尾濕地特別景觀區」、「特五-曾文溪口特別景觀區」部分公共河道水域，一般管制區之「管一-鹽水溪水域一般管制區」部分水域、「管八-七股潟湖一般管制區」水域應向台江國家公園申請核准後始得從事水域遊憩活動。
-							</div>
-							<a href="https://www.tjnp.gov.tw/" class="card-link">
-								台江國家公園官方網站
-							</a>								
-							<a href="https://www.tjnp.gov.tw/PublicInformationDetail.aspx?Cond=83713bde-e4e4-4f5c-a8ad-ed4cc0d60c34" class="card-link">
-								活動申請須知
-							</a>
-						</div>
+			<div class="item2 container" id="tab2">
+				<div class="row">
+					<div class="col-12">
+						<h3 class="TealBlue">禁止水域</h3>
+						<h5 class="text-justify">
+						</h5>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12">
-					<h3 class="TealBlue">相關連結</h3>
-					<h5 class="text-justify">
-						提供漁船管理辦法、賞鯨指南PDF、藍色公路
-					</h5>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">娛樂漁船</h5>
-							<div class="card-text">
-								此為漁業署之娛樂漁業管理辦法條文連結，提供法條參考與相關文件。
-							</div>								
-							<a href="https://www.fa.gov.tw/cht/LawsCentralFisheries/content.aspx?id=17&chk=76cc8fe4-de25-4a4f-8a46-bdfd838601cc&param" class="card-link">
-								漁業署相關文件連結
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">撿拾漂流木</h5>
-							<div class="card-text">
-								林務局提供漂流木公文，須注意撿拾對象、區域、時間。撿拾後須到站登記才能搬運離開。
-							</div>								
-							<a href="https://www.forest.gov.tw/" class="card-link">
-								林務局官方網站
-							</a>
-							<a href="https://www.forest.gov.tw/Driftwood" class="card-link">
-								撿拾漂流木開放時間查詢
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">賞鯨活動</h5>
-							<div class="card-text">
-								臺灣鯨豚資源豐富，全球80多種鯨豚中，有近30種曾出現於我國周遭海域，每年4月到10月間是臺灣的賞鯨季節，海保署透過「臺灣海域賞鯨指南」發布，以淺顯易懂的圖像文字，說明友善賞鯨重點原則，希望大家都能當個負責任的遊客，在開心賞鯨時，也瞭解如何減少賞鯨活動對於鯨豚族群造成衝擊，讓珍貴的鯨豚資源與賞鯨產業皆能永續發展。
-							</div>								
-							<a href="https://www.oca.gov.tw/ch/index.jsp" class="card-link">
-								海洋保育署官方網站
-							</a>
-							<a href="https://ftz.mtnet.gov.tw/YBerth/Portal/Logout" class="card-link">
-								賞鯨指南(PDF)
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">藍色公路</h5>
-							<div class="card-text">
-								藍色公路目前主要有兩條航線。一是基隆河，由大佳河濱公園碼頭出發至美堤碼頭、錫口碼頭，於內湖科技園區附近的河域再往返，主要以遊河為主，夜晚河畔建築物燈光以及橋上的光雕點綴，更能展現臺北都市之美；另外一條是淡水河，而在淡水河有五個乘船處，分別是大稻埕碼頭、關渡碼頭、淡水客船碼頭、淡水漁人碼頭、八里客船碼頭。
-							</div>								
-							<a href="https://www.riverfun.net/" class="card-link">
-								台北市藍色水路旅遊官方網站
-							</a>
-							<a href="https://www.cwb.gov.tw/V8/C/M/bluehighway_home.html" class="card-link">
-								藍色公路浪高、風級等級說明
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">遊艇管理規則</h5>
-							<div class="card-text">
-								此為全國法規資料庫之【遊艇管理規則】法規，提供有需要之民眾查閱。
-							</div>								
-							<a href="https://law.moj.gov.tw/Index.aspx" class="card-link">
-								全國法規資料庫官方網站
-							</a>
-							<a href="https://law.moj.gov.tw/LawClass/LawAll.aspx?pcode=K0070069" class="card-link">
-								遊艇管理規則法規
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6">
-					<div class="card mt-2">
-						<div class="card-body">
-							<h5 class="card-title">遊艇管理規則</h5>
-							<div class="card-text">
-								產險業者推出「海域活動綜合保險」商品，保障內容除了一般傷害保險與旅行平安險保障外，還增加民眾參與海域休憩活動可能面臨的傷害保障。
-							</div>								
-							<a href="http://www.nlia.org.tw/" class="card-link">
-								中華民國產物保險商業同業公會
-							</a>
-							<a href="http://www.nlia.org.tw/modules/tadnews/page.php?ncsn=130&nsn=912#A" class="card-link">
-								海域活動保險專區
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<section class="item2 container">
-			<div class="row">
-				<div class="col-12">
-					<h3 class="TealBlue">禁止水域</h3>
-					<h5 class="text-justify">
-					</h5>
-				</div>
+			<div class="item3 container" id="tab3">
+				aaaaa
 			</div>
 
-			<div class="row">
-				<div class="col-12">
-					<h3 class="TealBlue">礙航/射擊通報</h3>
-					<h5 class="text-justify">
-					</h5>
-				</div>
-				<div class="col-4">
-					<select class="">
-						<option value="">請選擇地區</option>
-						<option value="kaohsiung">基隆</option>
-						<option value="kaohsiung">臺北</option>
-						<option value="taichung">臺中</option>
-						<option value="">嘉義</option>
-						<option value="">高雄</option>
-						<option value="">屏東</option>
-						<option value="">臺東</option>
-					</select>
-				</div>
-				<div class="col-4">
-					
-				</div>
+		</section>
+		<footer class="container text-center mt-2">
+			<div class="row pt-3 opacity">
+				<h6 class="col-12 col-sm-4 col-lg-2">&copy海洋委員會</h6>
+				<h6 class="col-12 col-sm-8 col-lg-4">高雄市前鎮區成功二路25號4樓</h6>
+				<h6 class="col-12 col-sm-4 col-lg-2">(07)338-1810</h6>
+				<h6 class="col-12 col-sm-8 col-lg-4">
+					瀏覽人次:<p id="people" class="d-inline">2223</p>
+				</h6>
 			</div>
-		</section>
-		<section class="item3 container">
-			
-		</section>
-		<footer>
-      <div class="container-fluid">
-        <div class="row no-gutters">
-          <h6 class="col-4 col-sm-4 col-md-2 col-lg-2">&copy海洋委員會</h6>
-          <h6 class="col-8 col-sm-4 col-sm-5 col-md-4 col-lg-4">高雄市前鎮區成功二路25號4樓</h6>
-          <h6 class="col-12 col-sm-4  col-md-2 col-lg-2">(07)338-1810</h6>
-          <h6 class="col-12 col-4 col-sm-6 col-md-4">
-            瀏覽人次:<p id="people" class="d-inline">2223</p>
-          </h6>
-        </div>
-      </div>
-    </footer>
+		</footer>
 	</body>
 </html>
